ns1/podvolume.yaml
#Make a POD with NGINX on static volume
apiVersion: v1
kind: Pod
metadata:
  name: nginxpod
  namespace: ns1
spec:
  containers:
    - image: nginx:1.15.5
      name: mypod
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 250m
          memory: 256Mi
      volumeMounts:
        - name: azure
          mountPath: /mnt/azure
  volumes:
    - name: azure
      azureDisk:
        kind: Managed
        diskName: rkStaticDisk
        diskURI: /subscriptions/fedf4c96-f367-4754-9324-961fc2ef4113/resourceGroups/MC_kubRg_rlk8sclu-j4r5_westeurope/providers/Microsoft.Compute/disks/rkStaticDisk
